--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <div class="card">
             <img src="Projects/Screenshot 2022-11-16 at 13-40-09 Idyzraf.png" class="card-img-top" alt="Project 1">
             <div class="card-body">
-              <p class="card-text">Sebuah Website Penjualan Barang Online.</p>
+              <p class="card-text">Selling Project.</p>
             </div>
           </div>
           </div>
@@ -179,7 +179,7 @@
           <div class="col-md-6">
             <form>
               <div class="mb-3">
-                <label for="name" class="form-label">Nama Lengkap</label>
+                <label for="name" class="form-label">Full Name</label>
                 <input type="text" class="form-control" id="name" aria-describedby="name">
               </div>
               <div class="mb-3">
@@ -187,7 +187,7 @@
                 <input type="email" class="form-control" id="email" aria-describedby="email">
               </div>
               <div class="mb-3">
-                <label for="pesan" class="form-label">Pesan</label>
+                <label for="pesan" class="form-label">Message</label>
                 <textarea class="form-control" id="pesan" rows="3"></textarea>
               </div>
               <button type="submit" class="btn btn-primary">Send</button>
